# pyinit

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
potara/: cli.py
pyinit/: cli.py
templates/: .gitignore.j2  LICENSE.j2  Makefile.j2  README.md.j2  ci.yml.j2  dependabot.yml.j2  src_init.py.j2  test_project.py.j2
tests/: test_cli.py
