[tool.poetry]
name = "pyinit"
version = "0.1.0"
description = "A CLI tool to initialize new Python projects with a standardized structure."
authors = ["Brad Kovaluk <bkovaluk@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.4"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.6"
pytest = "^8.3.3"

[tool.poetry.scripts]
pyinit = "pyinit.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
