[tool.poetry]
name = "pyinit"
version = "0.1.0"
description = "A CLI tool to initialize new Python projects with a standardized structure."
authors = ["Brad Kovaluk <bkovaluk@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.4"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.6"
pytest = "^8.3.3"
coverage = "^7.6.1"
pre-commit = "^4.0.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
pyinit = "pyinit.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I"]
lint.ignore = []
exclude = ["venv", ".venv", "build", "dist"]
